# BladeGen

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerFlags.cmake  VendorCppAD.cmake  VendorJson.cmake  VendorOCCT.cmake
docs/sphinx/: api.rst  index.rst
docs/sphinx/theory/: blade_assembly.rst  coordinate_system.rst  index.rst  profile.rst
src/: CMakeLists.txt  main.cpp
src/blade/: BSplineBasis.hpp  BladeSection.hpp  OcctBlade.cpp  OcctBlade.hpp  ProfileSection.hpp  StreamlineMPrime.hpp
src/geometry/: OcctUtils.cpp  OcctUtils.hpp
src/io/: IgesExporter.cpp  IgesExporter.hpp  StepExporter.cpp  StepExporter.hpp  StlExporter.cpp  StlExporter.hpp
src/params/: BladeParams.cpp  BladeParams.hpp
src/pipeline/: BladeRunner.cpp  BladeRunner.hpp
tests/: CMakeLists.txt
tests/blade/: CMakeLists.txt  test_bspline_basis.cpp  test_mprime.cpp  test_profile.cpp
tests/geometry/: CMakeLists.txt  test_primitives.cpp
tests/io/: CMakeLists.txt  test_iges_export.cpp  test_step_export.cpp  test_stl_export.cpp
tests/math/: CMakeLists.txt  test_cppad.cpp
tests/params/: CMakeLists.txt  test_blade_params.cpp
tests/pipeline/: CMakeLists.txt  test_blade_runner.cpp
